用jar包的方式启动程序